--- a/fixtures/vcr_cassettes/response_export_start_success.yml
+++ b/fixtures/vcr_cassettes/response_export_start_success.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://co1.qualtrics.com/API/v1/surveys/SV_djzgZ6eJXqnIUyF/responseExports?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ&fileType=CSV&useLabels=false&decimalFormat=.&useLocalTime=false
+    uri: https://co1.qualtrics.com/API/v1/surveys/SV_djzgZ6eJXqnIUyF/responseExports?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ&decimalFormat=.&fileType=CSV&useLabels=false&useLocalTime=false
     body:
       encoding: US-ASCII
       string: ''
@@ -12,7 +12,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message: 
+      message:
     headers:
       server:
       - Apache-Coyote/1.1
@@ -27,6 +27,6 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"result":{"exportStatus":"http://co1.qualtrics.com/API/v1/surveys/responseExports/ES_cwLvnQHobKfV9t3"},"meta":{"status":"Success","qualtricsErrorCode":null,"errorMessage":null}}'
-    http_version: 
+    http_version:
   recorded_at: Mon, 23 Mar 2015 00:05:01 GMT
 recorded_with: VCR 2.9.3
