--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: ruby
 rvm:
   - 2.1.0
-install:
-  gem uninstall bundler
-  gem install bundler --version '~> 1.7'
+install: gem install bundler --version '~> 1.7'
