--- a/fixtures/vcr_cassettes/survey_collection_fetch_sucess.yml
+++ b/fixtures/vcr_cassettes/survey_collection_fetch_sucess.yml
@@ -2,32 +2,34 @@
 http_interactions:
 - request:
     method: get
-    uri: https://co1.qualtrics.com/API/v1/surveys?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+    uri: https://co1.qualtrics.com/API/v3/surveys
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
       User-Agent:
-      - Faraday v0.8.9
+      - Faraday v0.9.2
   response:
     status:
       code: 200
       message: 
     headers:
-      server:
-      - Apache-Coyote/1.1
       content-type:
-      - application/json
+      - application/json; charset=utf-8
+      request-time:
+      - '573'
       content-length:
-      - '223'
+      - '1737'
       date:
-      - Sun, 22 Mar 2015 21:05:57 GMT
+      - Mon, 11 Apr 2016 13:04:55 GMT
       connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"result":[{"id":"SV_djzgZ6eJXqnIUyF","name":"test_survey","ownerId":"UR_3fnAz35QCGlr725","lastModified":"2015-03-20
-        12:56:33","status":"Inactive"}],"meta":{"status":"Success","qualtricsErrorCode":null,"errorMessage":null}}'
+      string: '{"result":{"elements":[{"id":"SV_djzgZ6eJXqnIUyF","name":"Test","ownerId":"UR_3fnAz35QCGlr725","lastModified":"2015-08-06T16:11:15Z","isActive":false}],"nextPage":"https://co1.qualtrics.com/API/v3/surveys?offset=10"},"meta":{"httpStatus":"200
+        - OK"}}'
     http_version: 
-  recorded_at: Sun, 22 Mar 2015 21:05:57 GMT
+  recorded_at: Mon, 11 Apr 2016 13:04:55 GMT
 recorded_with: VCR 2.9.3
