--- a/fixtures/vcr_cassettes/panel_collection_fetch_success.yml
+++ b/fixtures/vcr_cassettes/panel_collection_fetch_success.yml
@@ -2,31 +2,34 @@
 http_interactions:
 - request:
     method: get
-    uri: https://co1.qualtrics.com/API/v1/panels?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+    uri: https://co1.qualtrics.com/API/v3/mailinglists
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      X-API-TOKEN:
+      - 2aYeWieRoRq1cOapLnTKZuHuQc8FMq7zZvSGps0v
       User-Agent:
-      - Faraday v0.8.9
+      - Faraday v0.9.2
   response:
     status:
       code: 200
-      message:
+      message: 
     headers:
-      server:
-      - Apache-Coyote/1.1
       content-type:
-      - application/json
+      - application/json; charset=utf-8
+      request-time:
+      - '742'
       content-length:
-      - '223'
+      - '1329'
       date:
-      - Sun, 28 Jun 2015 21:05:57 GMT
+      - Mon, 11 Apr 2016 13:26:52 GMT
       connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"result":[{"panelId":"AB_abcdefghijk","name":"Master Panel","libraryId":"GR_abcdefghijk","category":"Unassigned"}],"meta":{"status":"Success","qualtricsErrorCode":null,"errorMessage":null}}'
-    http_version:
-  recorded_at: Sun, 28 Jun 2015 21:05:57 GMT
+      string: '{"result":{"elements":[{"panelId":"AB_abcdefghijk","name":"Master Panel","libraryId":"GR_abcdefghijk","category":"Unassigned"}],"nextPage":"https://co1.qualtrics.com/API/v3/mailinglists?offset=10"},"meta":{"httpStatus":"200
+        - OK"}}'
+    http_version: 
+  recorded_at: Mon, 11 Apr 2016 13:26:52 GMT
 recorded_with: VCR 2.9.3
