--- a/fixtures/vcr_cassettes/response_export_start_success.yml
+++ b/fixtures/vcr_cassettes/response_export_start_success.yml
@@ -1,32 +1,37 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://co1.qualtrics.com/API/v1/surveys/SV_djzgZ6eJXqnIUyF/responseExports?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ&decimalFormat=.&fileType=CSV&useLabels=false&useLocalTime=false
+    method: post
+    uri: https://co1.qualtrics.com/API/v3/responseexports
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: '{"format":"csv","surveyId":"SV_bpCTGQvjOqgd4RD","useLabels":false,"decimalSeparator":".","useLocalTime":false}'
     headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
       User-Agent:
-      - Faraday v0.8.9
+      - Faraday v0.9.2
+      Content-Type:
+      - application/json
   response:
     status:
       code: 200
-      message:
+      message: 
     headers:
-      server:
-      - Apache-Coyote/1.1
       content-type:
-      - application/json
+      - application/json; charset=utf-8
+      request-time:
+      - '317'
       content-length:
-      - '178'
+      - '82'
       date:
-      - Mon, 23 Mar 2015 00:05:00 GMT
+      - Tue, 12 Apr 2016 10:08:28 GMT
       connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"result":{"exportStatus":"http://co1.qualtrics.com/API/v1/surveys/responseExports/ES_cwLvnQHobKfV9t3"},"meta":{"status":"Success","qualtricsErrorCode":null,"errorMessage":null}}'
-    http_version:
-  recorded_at: Mon, 23 Mar 2015 00:05:01 GMT
+      string: '{"result":{"id":"ES_to9jgploprbdnvi7uir84vq59l"},"meta":{"httpStatus":"200
+        - OK"}}'
+    http_version: 
+  recorded_at: Tue, 12 Apr 2016 10:08:29 GMT
 recorded_with: VCR 2.9.3
