--- a/fixtures/vcr_cassettes/response_export_update_success.yml
+++ b/fixtures/vcr_cassettes/response_export_update_success.yml
@@ -2,60 +2,34 @@
 http_interactions:
 - request:
     method: get
-    uri: http://co1.qualtrics.com/API/v1/surveys/responseExports/ES_cwLvnQHobKfV9t3?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+    uri: https://co1.qualtrics.com/API/v3/responseexports/ES_abcd
     body:
       encoding: US-ASCII
       string: ''
     headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
       User-Agent:
-      - Faraday v0.8.9
-  response:
-    status:
-      code: 301
-      message: 
-    headers:
-      location:
-      - https://co1.qualtrics.com/API/v1/surveys/responseExports/ES_cwLvnQHobKfV9t3?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
-      server:
-      - BigIP
-      content-length:
-      - '0'
-      date:
-      - Mon, 23 Mar 2015 00:58:29 GMT
-      connection:
-      - close
-    body:
-      encoding: UTF-8
-      string: ''
-    http_version: 
-  recorded_at: Mon, 23 Mar 2015 00:58:29 GMT
-- request:
-    method: get
-    uri: https://co1.qualtrics.com/API/v1/surveys/responseExports/ES_cwLvnQHobKfV9t3?apiToken=6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v0.8.9
+      - Faraday v0.9.2
   response:
     status:
       code: 200
       message: 
     headers:
-      server:
-      - Apache-Coyote/1.1
       content-type:
-      - application/json
+      - application/json; charset=utf-8
+      request-time:
+      - '19'
       content-length:
-      - '278'
+      - '162'
       date:
-      - Mon, 23 Mar 2015 00:58:30 GMT
+      - Tue, 12 Apr 2016 10:28:40 GMT
       connection:
       - close
     body:
       encoding: UTF-8
-      string: '{"result":{"percentComplete":100.0,"fileUrl":"https://qualtrics-export.s3.amazonaws.com/F_bJamXsfzuGyjRWJ?Expires=1427673600&AWSAccessKeyId=AKIAI3EW3KB5A6DT2WDA&Signature=cBuebySMaFIU/St4q8idIUuxuG4%3D"},"meta":{"status":"Success","qualtricsErrorCode":null,"errorMessage":null}}'
+      string: '{"result":{"percentComplete":100.0,"file":"https://co1.qualtrics.com/API/v3/responseexports/ES_xxxxxxxxxxx/file"},"meta":{"httpStatus":"200
+        - OK"}}'
     http_version: 
-  recorded_at: Mon, 23 Mar 2015 00:58:30 GMT
+  recorded_at: Tue, 12 Apr 2016 10:28:42 GMT
 recorded_with: VCR 2.9.3
