--- a/fixtures/vcr_cassettes/panel_collection_fetch_success.yml
+++ b/fixtures/vcr_cassettes/panel_collection_fetch_success.yml
@@ -32,4 +32,36 @@ http_interactions:
         - OK"}}'
     http_version: 
   recorded_at: Mon, 11 Apr 2016 13:26:52 GMT
+- request:
+    method: get
+    uri: https://co1.qualtrics.com/API/v3/mailinglists
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-API-TOKEN:
+      - 2aYeWieRoRq1cOapLnTKZuHuQc8FMq7zZvSGps0v
+      User-Agent:
+      - Faraday v0.9.2
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      request-time:
+      - '742'
+      content-length:
+      - '1329'
+      date:
+      - Mon, 11 Apr 2016 13:26:52 GMT
+      connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"result":{"elements":[{"panelId":"AB_abcdefghijk","name":"Master Panel","libraryId":"GR_abcdefghijk","category":"Unassigned"}],"nextPage":"https://co1.qualtrics.com/API/v3/mailinglists?offset=20"},"meta":{"httpStatus":"200
+        - OK"}}'
+    http_version: 
+  recorded_at: Mon, 11 Apr 2016 13:26:52 GMT
 recorded_with: VCR 2.9.3
