--- a/fixtures/vcr_cassettes/survey_collection_fetch_sucess.yml
+++ b/fixtures/vcr_cassettes/survey_collection_fetch_sucess.yml
@@ -32,4 +32,36 @@ http_interactions:
         - OK"}}'
     http_version: 
   recorded_at: Mon, 11 Apr 2016 13:04:55 GMT
+- request:
+    method: get
+    uri: https://co1.qualtrics.com/API/v3/surveys?offset=10
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+      User-Agent:
+      - Faraday v0.9.2
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      request-time:
+      - '573'
+      content-length:
+      - '1737'
+      date:
+      - Mon, 11 Apr 2016 13:04:55 GMT
+      connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"result":{"elements":[],"nextPage":null},"meta":{"httpStatus":"200
+        - OK"}}'
+    http_version: 
+  recorded_at: Mon, 11 Apr 2016 13:04:55 GMT
 recorded_with: VCR 2.9.3
