--- a/fixtures/vcr_cassettes/panel_member_collection_create_success.yml
+++ b/fixtures/vcr_cassettes/panel_member_collection_create_success.yml
@@ -33,6 +33,38 @@ http_interactions:
     http_version: 
   recorded_at: Tue, 12 Apr 2016 21:35:39 GMT
 - request:
+    method: get
+    uri: https://co1.qualtrics.com/API/v3/mailinglists/ML_0APx3C4rmHER6w5
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+      User-Agent:
+      - Faraday v0.9.2
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      request-time:
+      - '216'
+      content-length:
+      - '164'
+      date:
+      - Wed, 13 Apr 2016 13:15:28 GMT
+      connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"result":{"id":"ML_0APx3C4rmHER6w5","libraryId":"UR_5dURLpfp5tm43EV","name":"Panel name","category":"Unassigned"},"meta":{"httpStatus":"200 -
+        OK"}}'
+    http_version: 
+  recorded_at: Wed, 13 Apr 2016 13:15:28 GMT
+- request:
     method: post
     uri: https://co1.qualtrics.com/API/v3/mailinglists/ML_0APx3C4rmHER6w5/contactimports
     body:
@@ -70,4 +102,36 @@ http_interactions:
         OK"}}'
     http_version: 
   recorded_at: Tue, 12 Apr 2016 21:35:40 GMT
+- request:
+    method: get
+    uri: https://co1.qualtrics.com/API/v3/mailinglists/ML_bC2c5xBz1DxyOYB
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+      User-Agent:
+      - Faraday v0.9.2
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      request-time:
+      - '216'
+      content-length:
+      - '164'
+      date:
+      - Wed, 13 Apr 2016 13:15:28 GMT
+      connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"result":{"id":"ML_bC2c5xBz1DxyOYB","libraryId":"UR_5dURLpfp5tm43EV","name":"Panel name","category":"Unassigned"},"meta":{"httpStatus":"200 -
+        OK"}}'
+    http_version: 
+  recorded_at: Wed, 13 Apr 2016 13:15:28 GMT
 recorded_with: VCR 2.9.3
