--- a/fixtures/vcr_cassettes/response_export_start_success.yml
+++ b/fixtures/vcr_cassettes/response_export_start_success.yml
@@ -34,4 +34,36 @@ http_interactions:
         - OK"}}'
     http_version: 
   recorded_at: Tue, 12 Apr 2016 10:08:29 GMT
+- request:
+    method: get
+    uri: https://co1.qualtrics.com/API/v3/surveys/SV_bpCTGQvjOqgd4RD
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      X-API-TOKEN:
+      - 6Wpo0Vsx1cN1kcHivCaGTz5IhOvchLrg1o4L0KOZ
+      User-Agent:
+      - Faraday v0.9.2
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      content-type:
+      - application/json; charset=utf-8
+      request-time:
+      - '642'
+      content-length:
+      - '1339'
+      date:
+      - Wed, 13 Apr 2016 13:04:14 GMT
+      connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '{"result":{"id":"SV_bpCTGQvjOqgd4RD","name":"test","ownerId":"owner_id","organizationId":"organizationid","isActive":true,"creationDate":"2016-04-01T09:12:05Z","lastModifiedDate":"2016-04-06T15:04:28Z","expiration":{"startDate":null,"endDate":null},"questions":{},"exportColumnMap":{},"blocks":{},"flow":[],"embeddedData":[],"responseCounts":{"auditable":0,"generated":2,"deleted":2}},"meta":{"httpStatus":"200
+        - OK"}}'
+    http_version: 
+  recorded_at: Wed, 13 Apr 2016 13:04:14 GMT
 recorded_with: VCR 2.9.3
