--- a/fixtures/vcr_cassettes/panel_collection_fetch_fail.yml
+++ b/fixtures/vcr_cassettes/panel_collection_fetch_fail.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://co1.qualtrics.com/API/v3/panels
+    uri: https://co1.qualtrics.com/API/v3/mailinglists
     body:
       encoding: US-ASCII
       string: ''
@@ -13,7 +13,7 @@ http_interactions:
       - Faraday v0.9.2
   response:
     status:
-      code: 200
+      code: 400
       message: 
     headers:
       server:
